update with spark to run on Orielly